@@ -1,26 +1,27 @@
 package com.ufcg.psoft.project.service.usuario;
 
-import com.ufcg.psoft.project.exception.UsuarioNaoExisteException;
+import com.ufcg.psoft.project.dto.usuario.PromocaoPremiumResponseDTO;
 import com.ufcg.psoft.project.dto.usuario.UsuarioPostPutRequestDTO;
 import com.ufcg.psoft.project.dto.usuario.UsuarioResponseDTO;
 import com.ufcg.psoft.project.exception.CodigoDeAcessoInvalidoException;
-import com.ufcg.psoft.project.exception.EmailJaCadastradoException;
+import com.ufcg.psoft.project.exception.usuario.EmailJaCadastradoException;
+import com.ufcg.psoft.project.exception.usuario.UsuarioNaoExisteException;
 import com.ufcg.psoft.project.model.Usuario;
 import com.ufcg.psoft.project.repository.UsuarioRepository;
+import com.ufcg.psoft.project.service.premium.PromocaoPremiumService;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class UsuarioServiceImpl implements UsuarioService {
 
-    @Autowired
-    UsuarioRepository usuarioRepository;
-    @Autowired
-    ModelMapper modelMapper;
+    final UsuarioRepository usuarioRepository;
+    final ModelMapper modelMapper;
+    final PromocaoPremiumService promocaoPremiumService;
 
     @Override
     public UsuarioResponseDTO alterar(Long id, String codigoAcesso, UsuarioPostPutRequestDTO usuarioPostPutRequestDTO) {
@@ -68,7 +69,7 @@ public class UsuarioServiceImpl implements UsuarioService {
         List<Usuario> usuarios = usuarioRepository.findByNomeContaining(nome);
         return usuarios.stream()
                 .map(UsuarioResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -76,12 +77,17 @@ public class UsuarioServiceImpl implements UsuarioService {
         List<Usuario> usuarios = usuarioRepository.findAll();
         return usuarios.stream()
                 .map(UsuarioResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public UsuarioResponseDTO recuperar(Long id) {
         Usuario usuario = usuarioRepository.findById(id).orElseThrow(UsuarioNaoExisteException::new);
         return new UsuarioResponseDTO(usuario);
+    }
+
+    @Override
+    public PromocaoPremiumResponseDTO obterPromocao(Long usuarioId) {
+        return promocaoPremiumService.obterPromocao(usuarioId);
     }
 }
